--- a/package.json
+++ b/package.json
@@ -12,11 +12,27 @@
     "test": "hardhat test"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
-    "hardhat": "^2.12.6"
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "chai": "^4.2.0",
+    "ethereum-waffle": "^3.0.0",
+    "ethers": "^5.5.4",
+    "hardhat": "^2.8.4"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.1",
-    "solmate": "^6.6.1"
+    "solmate": "^6.6.1",
+    "@atixlabs/hardhat-time-n-mine": "^0.0.5",
+    "@chainlink/contracts": "^0.4.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.1",
+    "@openzeppelin/contracts": "^4.4.2",
+    "@openzeppelin/contracts-upgradeable": "4.4.0",
+    "axios": "^1.0.0",
+    "black-scholes": "^1.1.0",
+    "dotenv": "^16.0.0",
+    "hardhat-deploy": "^0.10.5",
+    "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "hardhat-gas-reporter": "^1.0.8",
+    "node-fetch": "2",
+    "web3-utils": "^1.7.0"
   }
 }
