--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.5.4",
-    "hardhat": "^2.8.4"
+    "hardhat": "^2.8.4",
+    "solidity-coverage": "^0.8.3"
   },
   "dependencies": {
-    "solmate": "^6.6.1",
     "@atixlabs/hardhat-time-n-mine": "^0.0.5",
     "@chainlink/contracts": "^0.4.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
@@ -33,6 +33,7 @@
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.8",
     "node-fetch": "2",
+    "solmate": "^6.6.1",
     "web3-utils": "^1.7.0"
   }
 }
